@startuml Builder

object Client {
    -director
    -builder
    +make()
}

class Director {
    -builder
    +setBuilder()
    +buildMinimalViableProduct()
    +buildFullFeaturedProduct()
}

interface Builder {
    +reset()
    +buildStepA()
    +buildStepB()
    +buildStepC()
    +getProduct()
}

class Product {
    +steps
    +listSteps()
}

class ConcreteBuilder {
    -product
    +reset()
    +buildStepA()
    +buildStepB()
    +buildStepC()
    +getProduct()
}

Client --> Director
Client ..> Builder
Director --> Builder
Builder <|.. ConcreteBuilder
ConcreteBuilder --> Product
@enduml
